# RecursionSafe.py

./: .travis.yml  MANIFEST.in  ReadMe.md  RecursionSafe.py  setup.cfg
