[metadata]
name = RecursionSafe
author = KOLANICH
url = https://github.com/KOLANICH/RecursionSafe.py
description = Prevents recursive functions walking collections from infinite looping.
long_description = file: ReadMe.md
keywords = collection, looping, recursion
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent

[options]
python_requires = >=3.4
zip_safe = True
include_package_data = True
py_modules = RecursionSafe
setup_requires = setuptools_scm;

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]